objects/SLP_OnBoardingUsers__c.object
<CustomObject>
    <fields>
        <fullName>Community_1__c</fullName>
        <label>Community_1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_2__c</fullName>
        <label>Community_2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_3__c</fullName>
        <label>Community_3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>SLP_OnBoardingUsers</label>
    <nameField>
        <displayFormat>OB-{0000000000}</displayFormat>
        <label>SLP_OnBoardingUsers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLP_OnBoardingUser</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>